--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Kepler-22b</title>
+    <style>
+        body {
+            background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+        }
+        img {
+            filter: drop-shadow(5px 5px 50px #222);
+        }
+    </style>
 </head>
 <body>
-<h1>ты лопух!</h1>
+<div style="display:grid; align-items:center; justify-content:center; height:100vh">
+    <img src="kepler.png" alt="Kepler-22b"/>
+</div>
 </body>
 </html>
