--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <style>
         body {
             background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+            margin: 0;
+            padding: 0;
         }
         img {
             filter: drop-shadow(5px 5px 50px #222);
