--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
 
         #planet img {
-            transform: scale(0.5);
+            /*transform: scale(0.7);*/
         }
 
         #world {
