--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
         }
 
         #planet img {
-            /*transform: scale(0.7);*/
+            max-width: 70vw;
+            max-height: 70vh;
+            width: auto;
+            height: auto;
+            object-fit: contain;
+            display: block;
         }
 
         #world {
